workspaces/DC Dev/DC Dev/src/objects/Customer__c.object
<CustomObject>
    <description>Holds information about the customers.</description>
    <fields>
        <fullName>Email__c</fullName>
        <description>Holds the email address of the buyer.</description>
        <inlineHelpText>Enter the email address of the buyer.</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <description>Holds the mobile number of the customer.</description>
        <inlineHelpText>Enter the mobile number of the customer.</inlineHelpText>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name_of_Customer__c</fullName>
        <description>Holds the name of the buyer.</description>
        <inlineHelpText>Enter the name of the buyer.</inlineHelpText>
        <label>Name of Customer</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Customer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cusotmers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>